--- a/Basic GPT Prompter.ipynb
+++ b/Basic GPT Prompter.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# Querying the index\n",
-    "response = index.query(\"What are some Python tips?\")\n",
+    "response = index.query(\"What is the best Python library for data analysis?\")\n",
     "print(response)"
    ]
   }
